[NewFeat][Q2] add new rooms & reservations API
